// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Configure should render correctly render() should redirect to if no matching platform 1`] = `
<div>
  <Waiting />
  <div
    className="onboarding-Configure"
  >
    <ProjectContext
      orgId="testOrg"
      projectId="testProject"
    >
      <ProjectDocsContext>
        <ProjectInstallPlatform
          linkPath={[Function]}
          params={
            Object {
              "orgId": "testOrg",
              "platform": "other",
              "projectId": "testProject",
            }
          }
          platformData={
            Object {
              "hack": "actually set by ProjectDocsContext, this object is here to avoid proptypes warnings",
            }
          }
        />
      </ProjectDocsContext>
    </ProjectContext>
    <div
      className="btn btn-primary"
      onClick={[Function]}
    >
      skip configure
    </div>
  </div>
</div>
`;

exports[`Configure should render correctly render() should render platform docs 1`] = `
<Configure
  next={[Function]}
  params={
    Object {
      "orgId": "testOrg",
      "platform": "node",
      "projectId": "testProject",
    }
  }
>
  <div>
    <Waiting>
      <div
        className="awaiting-event"
      >
        <div
          className="wrap pull-right waiting-text"
        >
          <h3>
            Waiting for your event
          </h3>
          <div
            className="robot"
          >
            <span
              className="eye"
            />
          </div>
        </div>
        <h2>
          Configure your application
        </h2>
      </div>
    </Waiting>
    <div
      className="onboarding-Configure"
    >
      <ProjectContext
        orgId="testOrg"
        projectId="testProject"
      >
        <DocumentTitle
          title="undefined / undefined"
        >
          <ProjectDocsContext>
            <LoadingIndicator>
              <div
                className="loading"
              >
                <div
                  className="loading-indicator"
                />
                <div
                  className="loading-message"
                />
              </div>
            </LoadingIndicator>
          </ProjectDocsContext>
        </DocumentTitle>
      </ProjectContext>
      <div
        className="btn btn-primary"
        onClick={[Function]}
      >
        skip configure
      </div>
    </div>
  </div>
</Configure>
`;

exports[`Configure should render correctly render() shouldn't redirect for a found platform 1`] = `
<div>
  <Waiting />
  <div
    className="onboarding-Configure"
  >
    <ProjectContext
      orgId="testOrg"
      projectId="testProject"
    >
      <ProjectDocsContext>
        <ProjectInstallPlatform
          linkPath={[Function]}
          params={
            Object {
              "orgId": "testOrg",
              "platform": "node",
              "projectId": "testProject",
            }
          }
          platformData={
            Object {
              "hack": "actually set by ProjectDocsContext, this object is here to avoid proptypes warnings",
            }
          }
        />
      </ProjectDocsContext>
    </ProjectContext>
    <div
      className="btn btn-primary"
      onClick={[Function]}
    >
      skip configure
    </div>
  </div>
</div>
`;
